--- a/resources/appsportal/availableapps.ini
+++ b/resources/appsportal/availableapps.ini
@@ -1,6 +1,6 @@
 [ZeD Shot]
 url=https://zzedovec.github.io/pages/ZeDShot
-icon=https://zzedovec.github.io/icons/zedshot.png
+icon=https://zzedovec.github.io/icons/ZeDShot.png
 downloadurl=https://zzedovec.github.io/resources/zedshot/ZeDShot.exe
 downloadtext=Скоро вы сможете делать скриншоты ещё удобнее и быстрее.
 
