--- a/resources/appsportal/availableapps.ini
+++ b/resources/appsportal/availableapps.ini
@@ -3,6 +3,7 @@ url=https://zzedovec.github.io/pages/ZeDShot
 icon=https://zzedovec.github.io/icons/ZeDShot.png
 downloadurl=https://zzedovec.github.io/resources/zedshot/ZeDShot.exe
 downloadtext=Скоро вы сможете делать скриншоты ещё удобнее и быстрее.
+reqstartup=1
 
 [ZeD Weather]
 url=https://zzedovec.github.io/pages/ZeDWeather
@@ -15,3 +16,4 @@ url=https://zzedovec.github.io/pages/KellaCorners
 icon=https://zzedovec.github.io/icons/kellacornersicon.png
 downloadurl=https://zzedovec.github.io/resources/kellacorners/KellaCorners.exe
 downloadtext=Скоро вы получите единственное в своём роде ПО для горячих углов.
+reqstartup=1
