--- a/resources/appsportal/availableapps.ini
+++ b/resources/appsportal/availableapps.ini
@@ -1,6 +1,7 @@
 [ZeD Shot]
 url=https://zzedovec.github.io/pages/ZeDShot
 icon=https://zzedovec.github.io/icons/ZeDShot.png
+shortcuticon=https://zzedovec.github.io/icons/ze.ico
 downloadurl=https://zzedovec.github.io/resources/zedshot/ZeDShot.exe
 downloadtext=Скоро вы сможете делать скриншоты ещё удобнее и быстрее.
 reqstartup=1
@@ -8,12 +9,14 @@ reqstartup=1
 [ZeD Weather]
 url=https://zzedovec.github.io/pages/ZeDWeather
 icon=https://zzedovec.github.io/icons/zedweathericon.png
+shortcuticon=https://zzedovec.github.io/icons/zedweathericon.ico
 downloadurl=https://zzedovec.github.io/resources/zedweather/ZeDWeather.exe
 downloadtext=Скоро вы сможете смотреть погоду ещё удобнее и быстрее.
 
 [Kella Corners]
 url=https://zzedovec.github.io/pages/KellaCorners
 icon=https://zzedovec.github.io/icons/kellacornersicon.png
+shortcuticon=https://zzedovec.github.io/icons/kellacornersicon.ico
 downloadurl=https://zzedovec.github.io/resources/kellacorners/KellaCorners.exe
 downloadtext=Скоро вы получите единственное в своём роде ПО для горячих углов.
 reqstartup=1
