--- a/resources/appsportal/availableapps.ini
+++ b/resources/appsportal/availableapps.ini
@@ -5,6 +5,7 @@ shortcuticon=https://zzedovec.github.io/icons/ze.ico
 downloadurl=https://zzedovec.github.io/resources/zedshot/ZeDShot.exe
 downloadtext=Скоро вы сможете делать скриншоты ещё удобнее и быстрее.
 reqstartup=1
+about=Большие возможности для скриншотов
 
 [ZeD Weather]
 url=https://zzedovec.github.io/pages/ZeDWeather
@@ -12,6 +13,7 @@ icon=https://zzedovec.github.io/icons/zedweathericon.png
 shortcuticon=https://zzedovec.github.io/icons/zedweathericon.ico
 downloadurl=https://zzedovec.github.io/resources/zedweather/ZeDWeather.exe
 downloadtext=Скоро вы сможете смотреть погоду ещё удобнее и быстрее.
+about=Текущий прогноз погоды и почасовой
 
 [Kella Corners]
 url=https://zzedovec.github.io/pages/KellaCorners
@@ -20,3 +22,4 @@ shortcuticon=https://zzedovec.github.io/icons/kellacornersicon.ico
 downloadurl=https://zzedovec.github.io/resources/kellacorners/KellaCorners.exe
 downloadtext=Скоро вы получите единственное в своём роде ПО для горячих углов.
 reqstartup=1
+about=Назначение и управление горячими углами
