--- a/resources/appsportal/availableapps.ini
+++ b/resources/appsportal/availableapps.ini
@@ -6,6 +6,7 @@ downloadurl=https://zzedovec.github.io/resources/zedshot/ZeDShot.exe
 downloadtext=Скоро вы сможете делать скриншоты ещё удобнее и быстрее.
 reqstartup=1
 about=Большие возможности для скриншотов
+versionurl=https://zzedovec.github.io/resources/zedshot/currentversion.txt
 
 [ZeD Weather]
 url=https://zzedovec.github.io/pages/ZeDWeather
@@ -14,6 +15,7 @@ shortcuticon=https://zzedovec.github.io/icons/zedweathericon.ico
 downloadurl=https://zzedovec.github.io/resources/zedweather/ZeDWeather.exe
 downloadtext=Скоро вы сможете смотреть погоду ещё удобнее и быстрее.
 about=Текущий прогноз погоды и почасовой
+versionurl=https://zzedovec.github.io/resources/zedweather/currentversion.txt
 
 [Kella Corners]
 url=https://zzedovec.github.io/pages/KellaCorners
@@ -23,3 +25,4 @@ downloadurl=https://zzedovec.github.io/resources/kellacorners/KellaCorners.exe
 downloadtext=Скоро вы получите единственное в своём роде ПО для горячих углов.
 reqstartup=1
 about=Назначение и управление горячими углами
+versionurl=https://zzedovec.github.io/resources/kellacorners/currentversion.txt
