--- a/resources/appsportal/availableapps.ini
+++ b/resources/appsportal/availableapps.ini
@@ -2,7 +2,7 @@
 url=https://zzedovec.github.io/pages/ZeDShot
 icon=https://zzedovec.github.io/icons/ZeDShot.png
 shortcuticon=https://zzedovec.github.io/icons/ze.ico
-downloadurl=https://zzedovec.github.io/resources/zedshot/ZeDShot.exe
+downloadurl=https://www.dropbox.com/s/q5cmj6riablt465/zedshot.zip?dl=1
 downloadtext=Скоро вы сможете делать скриншоты ещё удобнее и быстрее.
 reqstartup=1
 about=Большие возможности для скриншотов
@@ -11,8 +11,7 @@ versionurl=https://zzedovec.github.io/resources/zedshot/currentversion.txt
 [ZeD Weather]
 url=https://zzedovec.github.io/pages/ZeDWeather
 icon=https://zzedovec.github.io/icons/zedweathericon.png
-shortcuticon=https://zzedovec.github.io/icons/zedweathericon.ico
-downloadurl=https://zzedovec.github.io/resources/zedweather/ZeDWeather.exe
+downloadurl=https://www.dropbox.com/s/17tlzffqharbnjq/zedweather.zip?dl=1
 downloadtext=Скоро вы сможете смотреть погоду ещё удобнее и быстрее.
 about=Текущий прогноз погоды и почасовой
 versionurl=https://zzedovec.github.io/resources/zedweather/currentversion.txt
@@ -21,7 +20,7 @@ versionurl=https://zzedovec.github.io/resources/zedweather/currentversion.txt
 url=https://zzedovec.github.io/pages/KellaCorners
 icon=https://zzedovec.github.io/icons/kellacornersicon.png
 shortcuticon=https://zzedovec.github.io/icons/kellacornersicon.ico
-downloadurl=https://zzedovec.github.io/resources/kellacorners/KellaCorners.exe
+downloadurl=https://www.dropbox.com/s/gxgdlk3dkitt956/kellacorners.zip?dl=1
 downloadtext=Скоро вы получите единственное в своём роде ПО для горячих углов.
 reqstartup=1
 about=Назначение и управление горячими углами
