--- a/resources/appsportal/availableapps.ini
+++ b/resources/appsportal/availableapps.ini
@@ -7,6 +7,8 @@ downloadtext=Скоро вы сможете делать скриншоты ещ
 reqstartup=1
 about=Большие возможности для скриншотов
 versionurl=https://zzedovec.github.io/resources/zedshot/currentversion.txt
+packagename=zedshot
+executable=ZeDShot.exe
 
 [ZeD Weather]
 url=https://zzedovec.github.io/pages/ZeDWeather
@@ -15,6 +17,8 @@ downloadurl=https://zzedovec.github.io/resources/zedweather/zedweather.zip
 downloadtext=Скоро вы сможете смотреть погоду ещё удобнее и быстрее.
 about=Текущий прогноз погоды и почасовой
 versionurl=https://zzedovec.github.io/resources/zedweather/currentversion.txt
+packagename=zedweather
+executable=ZeDWeather.exe
 
 [Kella Corners]
 url=https://zzedovec.github.io/pages/KellaCorners
@@ -25,3 +29,5 @@ downloadtext=Скоро вы получите единственное в сво
 reqstartup=1
 about=Назначение и управление горячими углами
 versionurl=https://zzedovec.github.io/resources/kellacorners/currentversion.txt
+packagename=kellacorners
+executable=KellaCorners.exe
