add queinu apps portal, kella binder

--- a/resources/appsportal/availableapps.ini
+++ b/resources/appsportal/availableapps.ini
@@ -31,3 +31,13 @@ about=Назначение и управление горячими углами
 versionurl=https://zzedovec.github.io/resources/kellacorners/currentversion.txt
 packagename=kellacorners
 executable=KellaCorners.exe
+
+[Kella Binder]
+url=https://zzedovec.github.io/pages/KellaBinder
+icon=https://zzedovec.github.io/icons/kellabindericon.png
+downloadurl=https://zzedovec.github.io/resources/kellabinder/kellabinder.zip
+downloadtext=Скоро вы получите уникальное бесплатное ПО для создания макросов.
+about=Макросы для любой клавиатуры
+versionurl=https://zzedovec.github.io/resources/kellabinder/currentversion.txt
+packagename=kellabinder
+executable=KellaBinder.exe
