--- a/resources/appsportal/availableapps.ini
+++ b/resources/appsportal/availableapps.ini
@@ -41,3 +41,4 @@ about=Макросы для любой клавиатуры
 versionurl=https://zzedovec.github.io/resources/kellabinder/currentversion.txt
 packagename=kellabinder
 executable=KellaBinder.exe
+reqadmin=1
